--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -367,7 +367,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.rotate-180, .-rotate-90, .scale-0, .scale-100, .transform, .hover\:scale-150, .hover\:scale-105, .hover\:scale-125 {
+.rotate-180, .rotate-90, .-rotate-90, .scale-0, .scale-100, .transform, .hover\:scale-150, .hover\:scale-105, .hover\:scale-125 {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -383,7 +383,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
-.shadow-xl, .shadow-2xl, .shadow-lg, .hover\:shadow-inner, .child\:shadow-2xl > * {
+.shadow-xl, .shadow-2xl, .shadow-lg, .shadow, .hover\:shadow-inner, .child\:shadow-2xl > * {
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -438,6 +438,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-50 {
   z-index: 50;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
@@ -470,14 +476,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
+.mr-0 {
+  margin-right: 0px;
+}
+.ml-auto {
+  margin-left: auto;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mr-0 {
-  margin-right: 0px;
 }
 .flex {
   display: flex;
@@ -503,8 +512,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-10 {
   height: 2.5rem;
 }
-.h-7 {
-  height: 1.75rem;
+.h-52 {
+  height: 13rem;
 }
 .h-64 {
   height: 16rem;
@@ -527,6 +536,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-8 {
   height: 2rem;
 }
+.h-7 {
+  height: 1.75rem;
+}
 .h-48 {
   height: 12rem;
 }
@@ -545,8 +557,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .min-h-\[75\%\] {
   min-height: 75%;
 }
-.min-h-max {
-  min-height: max-content;
+.min-h-\[20rem\] {
+  min-height: 20rem;
 }
 .w-2\/3 {
   width: 66.666667%;
@@ -572,11 +584,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-10 {
   width: 2.5rem;
 }
-.w-7 {
-  width: 1.75rem;
-}
 .w-8 {
   width: 2rem;
+}
+.w-6 {
+  width: 1.5rem;
 }
 .w-28 {
   width: 7rem;
@@ -584,14 +596,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-5 {
   width: 1.25rem;
 }
+.w-7 {
+  width: 1.75rem;
+}
 .w-1\/4 {
   width: 25%;
 }
 .w-1\/12 {
   width: 8.333333%;
-}
-.min-w-full {
-  min-width: 100%;
 }
 .max-w-\[1\.5rem\] {
   max-width: 1.5rem;
@@ -605,9 +617,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-grow {
   flex-grow: 1;
 }
-.table-auto {
-  table-layout: auto;
-}
 .table-fixed {
   table-layout: fixed;
 }
@@ -616,6 +625,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: var(--tw-transform);
+}
+.rotate-90 {
+  --tw-rotate: 90deg;
   transform: var(--tw-transform);
 }
 .-rotate-90 {
@@ -641,11 +654,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .cursor-auto {
   cursor: auto;
 }
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -688,6 +701,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .gap-4 {
   gap: 1rem;
+}
+.gap-1 {
+  gap: 0.25rem;
 }
 .place-self-start {
   place-self: start;
@@ -744,10 +760,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
-}
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 }
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
@@ -841,10 +853,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
 .bg-red-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
@@ -887,6 +895,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
@@ -1093,6 +1105,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .filter {
